--- a/assets/styles/media-query.css
+++ b/assets/styles/media-query.css
@@ -30,7 +30,7 @@
   }
 
   .header-content > * {
-    max-width: 512px;
+    max-width: 496px;
   }
 }
 
@@ -132,5 +132,20 @@
 
   .header-content > p {
     font-size: 24px;
+  }
+}
+
+@media (min-width:1025px) {
+  .header {
+    min-height: 100vh;
+  }
+}
+
+@media (min-width:1440px) {
+  .header {
+    height: 100%;
+    flex: 1;
+    min-height: 864px;
+    max-height: 864px;
   }
 }
