--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -71,10 +71,9 @@ main section {
   position: relative;
 }
 
-.header {
-  background: var(--clr-2-b);
-  padding: 32px;
-  min-height: 800px;
+.content {
+  max-width: 1440px;
+  overflow: hidden;
 }
 
 .header-backgrounds,
@@ -90,10 +89,17 @@ main section {
   position: absolute;
 }
 
-.header-animated-shape-1 {
+.header {
+  background: var(--clr-2-b);
+  padding: 0px;
+  padding-block: 96px;
+  min-height: 0;
+}
+
+.header-bg-shape-1 {
   height: 100%;
   width: 100%;
-  background-image: url('../images/Animated\ Shape\ Title.svg');
+  background-image: url('../images/Circles.svg');
   background-size: cover;
 }
 
@@ -115,9 +121,9 @@ main section {
       "i p"
       "i c";
   place-items: center;
-  max-width: 100vw;
   row-gap: 12px;
   column-gap: 18px;
+  padding: 32px;
 }
 
 .header-content > .header-logo {
@@ -282,8 +288,8 @@ main section {
 .intro-content {
   z-index: 1;
   display: grid;
-  min-height: 100%;
-  min-width: 100%;
+  height: 100%;
+  width: 100%;
   place-items: center;
   grid-template-areas:
       "a r";
@@ -292,9 +298,20 @@ main section {
 .ai-about-ctn {
   grid-area: a;
   background: var(--clr-1-b);
+  transform: translateX(-1440px);
 }
 
 .ai-role-ctn {
   grid-area: r;
   background: var(--clr-3-b);
+  transform: translateX(1440px);
+}
+
+.ai-about-ctn,
+.ai-role-ctn {
+  transition: all 0.5s ease-in-out;
+}
+
+.scroll-in {
+  transform: translateX(0);
 }
